update main activity, add collection playlist (inittail state), add top 50 audiophile alumn playlist